# codecraftai-analysis-statistical

./: .gitignore  AGENTS.md  LICENSE.md  LICENSE.txt  Makefile  README.rst  pyproject.toml
.github/workflows/: merge_gate.yml
development/: setup-environment
source/examples/: README.rst  example_01_by_group_accumulate.py  example_02_match_merge.py  example_03_lag_dif.py  example_04_keep_drop_rename.py  example_05_database_sqlite.py  example_06_dialect_named_declarations.py  example_07_compiled_step.py  example_08_columnar_pipeline.py  example_09_migration_advisor.py  example_10_custom_format.py  sasstep.py  sasstep_columnar.py  sasstep_db.py  sasstep_exec.py  sasstep_ir.py  sasstep_report.py
source/testroots/automojo/: __testroot__.py
source/testroots/automojo/tests/singlehost/analysis/statistical/: __init__.py
source/testroots/automojo/tests/singlehost/analysis/statistical/columnar/: test_columnar.py  test_columnar_via_factory.py
source/testroots/automojo/tests/singlehost/analysis/statistical/database/: test_databasereader.py  test_dialectdeclaration.py
source/testroots/automojo/tests/singlehost/analysis/statistical/engine/: test_lagqueue.py  test_observationengine.py  test_observationengine_via_factory.py
source/testroots/automojo/tests/singlehost/analysis/statistical/execution/: test_compiledstep.py  test_compiledstep_via_factory.py  test_edgecases.py
source/testroots/automojo/tests/singlehost/analysis/statistical/formats/: test_formats.py
source/testroots/automojo/tests/singlehost/analysis/statistical/ir/: test_irpipeline.py
source/testroots/automojo/tests/singlehost/analysis/statistical/missing/: test_missing.py
source/testroots/automojo/tests/singlehost/analysis/statistical/oracle/: test_oracle_equivalence.py
source/testroots/automojo/tests/singlehost/analysis/statistical/readers/: test_mergereader.py  test_setreader.py
source/testroots/automojo/tests/singlehost/analysis/statistical/report/: test_reportbuilder.py
source/testroots/automojo/tests/singlehost/analysis/statistical/types/: test_typeregistry.py
source/testroots/automojo/testshared/: referenceloader.py
source/testroots/automojo/testshared/factories/: sasdatasets.py
source/testroots/ccai/tests/singlehost/analysis/statistical/: __init__.py
source/testroots/ccai/tests/singlehost/analysis/statistical/columnar/: test_columnar.py  test_columnar_via_factory.py
source/testroots/ccai/tests/singlehost/analysis/statistical/database/: test_databasereader.py  test_dialectdeclaration.py
source/testroots/ccai/tests/singlehost/analysis/statistical/engine/: test_lagqueue.py  test_observationengine.py  test_observationengine_via_factory.py
source/testroots/ccai/tests/singlehost/analysis/statistical/execution/: test_compiledstep.py  test_compiledstep_via_factory.py  test_edgecases.py
source/testroots/ccai/tests/singlehost/analysis/statistical/formats/: test_formats.py
source/testroots/ccai/tests/singlehost/analysis/statistical/ir/: test_irpipeline.py
source/testroots/ccai/tests/singlehost/analysis/statistical/missing/: test_missing.py
source/testroots/ccai/tests/singlehost/analysis/statistical/oracle/: test_oracle_equivalence.py
source/testroots/ccai/tests/singlehost/analysis/statistical/readers/: test_mergereader.py  test_setreader.py
source/testroots/ccai/tests/singlehost/analysis/statistical/report/: test_reportbuilder.py
source/testroots/ccai/tests/singlehost/analysis/statistical/types/: test_typeregistry.py
source/testroots/ccai/testshared/: referenceloader.py
source/testroots/ccai/testshared/factories/: sasdatasets.py
specs/: DESIGN.md  ROADMAP.md
userguide/: 10-01-code-organization.rst  10-03-testing-patterns-and-practices.rst  10-04-01-testing-frameworks-unittest.rst  10-04-02-testing-frameworks-pytest.rst  10-04-03-testing-frameworks-testbase.rst  20-00-overview-and-mental-model.rst  20-01-engine-core-and-pdv.rst  20-02-readers-and-by-groups.rst  20-03-database-sources-and-dialects.rst  20-04-ir-classification-and-vectorization.rst  20-05-columnar-output.rst  20-06-migration-advisor.rst  20-07-porting-sas-jobs-to-python.rst  userguide.rst
